<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AddressCompleteDemo</string>
    <string name="title_activity_activity_vendor_details">ActivityVendorDetails</string>
    <string name="address_1">Address line 1</string>
    <string name="address_2">Address line 2</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postalCode">Postal Code</string>

</resources>
